// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui filter queries fetches environments 1`] = `
Object {
  "apm": Object {
    "events": Array [
      "transaction",
      "metric",
      "error",
    ],
  },
  "body": Object {
    "aggs": Object {
      "environments": Object {
        "terms": Object {
          "field": "service.environment",
          "missing": "ENVIRONMENT_NOT_DEFINED",
          "size": 100,
        },
      },
    },
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "range": Object {
              "@timestamp": Object {
                "format": "epoch_millis",
                "gte": 1528113600000,
                "lte": 1528977600000,
              },
            },
          },
          Object {
            "term": Object {
              "service.name": "foo",
            },
          },
        ],
      },
    },
    "size": 0,
  },
}
`;

exports[`ui filter queries fetches environments without a service name 1`] = `
Object {
  "apm": Object {
    "events": Array [
      "transaction",
      "metric",
      "error",
    ],
  },
  "body": Object {
    "aggs": Object {
      "environments": Object {
        "terms": Object {
          "field": "service.environment",
          "missing": "ENVIRONMENT_NOT_DEFINED",
          "size": 100,
        },
      },
    },
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "range": Object {
              "@timestamp": Object {
                "format": "epoch_millis",
                "gte": 1528113600000,
                "lte": 1528977600000,
              },
            },
          },
        ],
      },
    },
    "size": 0,
  },
}
`;
